// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: dark and state: error 1`] = `
Object {
  "message": Object {
    "&__icon": Object {
      "marginRight": "0.25rem",
    },
    "WebkitTextSizeAdjust": "none",
    "color": "#fc1717",
    "display": "flex",
    "font": "normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "auto",
    "marginTop": "0.25rem",
    "overflowWrap": "break-word",
    "textSizeAdjust": "none",
    "transition": "color var(--p-transition-duration, .24s) ease",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: dark and state: none 1`] = `
Object {
  "message": Object {
    "&__icon": Object {
      "marginRight": "0.25rem",
    },
    "WebkitTextSizeAdjust": "none",
    "color": undefined,
    "display": "flex",
    "font": "normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "auto",
    "marginTop": "0.25rem",
    "overflowWrap": "break-word",
    "textSizeAdjust": "none",
    "transition": "color var(--p-transition-duration, .24s) ease",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: dark and state: success 1`] = `
Object {
  "message": Object {
    "&__icon": Object {
      "marginRight": "0.25rem",
    },
    "WebkitTextSizeAdjust": "none",
    "color": "#01ba1d",
    "display": "flex",
    "font": "normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "auto",
    "marginTop": "0.25rem",
    "overflowWrap": "break-word",
    "textSizeAdjust": "none",
    "transition": "color var(--p-transition-duration, .24s) ease",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: light and state: error 1`] = `
Object {
  "message": Object {
    "&__icon": Object {
      "marginRight": "0.25rem",
    },
    "WebkitTextSizeAdjust": "none",
    "color": "#e00000",
    "display": "flex",
    "font": "normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "auto",
    "marginTop": "0.25rem",
    "overflowWrap": "break-word",
    "textSizeAdjust": "none",
    "transition": "color var(--p-transition-duration, .24s) ease",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: light and state: none 1`] = `
Object {
  "message": Object {
    "&__icon": Object {
      "marginRight": "0.25rem",
    },
    "WebkitTextSizeAdjust": "none",
    "color": undefined,
    "display": "flex",
    "font": "normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "auto",
    "marginTop": "0.25rem",
    "overflowWrap": "break-word",
    "textSizeAdjust": "none",
    "transition": "color var(--p-transition-duration, .24s) ease",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: light and state: success 1`] = `
Object {
  "message": Object {
    "&__icon": Object {
      "marginRight": "0.25rem",
    },
    "WebkitTextSizeAdjust": "none",
    "color": "#018a16",
    "display": "flex",
    "font": "normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "auto",
    "marginTop": "0.25rem",
    "overflowWrap": "break-word",
    "textSizeAdjust": "none",
    "transition": "color var(--p-transition-duration, .24s) ease",
  },
}
`;
